# rc-car-duino

./: .gitignore  .gitmodules
arduino/: Cargo.toml
arduino/avr-specs/: avr-atmega1280.json  avr-atmega2560.json  avr-atmega32u4.json  avr-atmega48p.json  avr-attiny85.json  avr-attiny88.json
arduino/src/: main.rs  map.rs  servo.rs
controller/: project.godot
controller/.gdignore/gdnative/: SConstruct
controller/.gdignore/gdnative/src/: lib.cpp  main.cpp  main.h
controller/lib/: library.tres
controller/main/: connector.gdns  log_line.gd  log_line.tscn  main.gd  main.tscn
controller/shader/: acceleration.gdshader  acceleration.tres  arrow.tres  failed.tres  info.tres  loading.tres  redify.tres  turn.tres
