[package]
name    = "rc-car-duino"
version = "0.1.0"
authors = ["Totobird Creations"]
edition = "2018"
license = "Apache-2.0"

[[bin]]
name  = "rc-car-duino"
test  = false
bench = false

[dependencies]
panic-halt   = "0.2.0"
ufmt         = "0.1.0"
nb           = "0.1.2"
embedded-hal = "0.2.3"
avr-device   = "0.3"

[dependencies.arduino-hal]
git      = "https://github.com/rahix/avr-hal"
rev      = "f84c0dff774c2292bc932b670955165161ecc7d1"
features = ["arduino-uno"]

[dependencies.atmega-hal]
git = "https://github.com/rahix/avr-hal"
rev = "f84c0dff774c2292bc932b670955165161ecc7d1"

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic     = "abort"
lto       = true
opt-level = "s"

[profile.release]
panic         = "abort"
codegen-units = 1
debug         = true
lto           = true
opt-level     = "s"
